Fixed (reduced) the vertical spacing in a table in models/CESM/doc/setup_guidelines.html which shows directory heirarchies and has spaces to denote subdirectories. The mechanism involves an adding a class to doc.css;
.keepspace tr, .keepspace td { white-space: pre; }

then using that class in the table in setup_guidelines.html;

<div class="keepspace" >
<table 
...
</table
</div>

This doesn't appear to interfere with other tables.



git-svn-id: https://svn-dares-dart.cgd.ucar.edu/DART/branches/rma_trunk@11334 dfa8782c-da17-4c45-ba5c-5625b50a00d6

Former-commit-id: a817eb947c0e70f9e03cd6eb5516eed71078fd9c

--- a/documentation/html/doc.css
+++ b/documentation/html/doc.css
@@ -1,10 +1,5 @@
-/*
- * DART software - Copyright UCAR. This open source software is provided
- * by UCAR, "as is", without charge, subject to all terms of use at
- * http://www.image.ucar.edu/DAReS/DART/DART_download
- *
- * DART $Id$
- */
+
+/* $Id$ */
 
 body{background:white;
       margin-left :5%;
@@ -54,6 +49,10 @@ div.routineIndent1 {
     border-width: thin;
     margin-left: 4%;
     width: 92%;}
+
+/* KDR added for CESM/doc/setup_guidelines.html to preserve blanks in table cells 
+    Too broad; applies to all tables and breaks the dartboard table;  tr, td { white-space: pre;}*/
+.keepspace tr, .keepspace td { white-space: pre; }
 
 table.indent1 {
     border: 0;
@@ -282,8 +281,3 @@ em{
 }
 
 /* # RGB(204,204,204) == "#CCCCCC" */
-
-/* <next few lines under version control, do not edit> */
-/* $URL$ */
-/* $Revision$ */
-/* $Date$ */
